force-app/main/default/objects/Product2/fields/AcctSeed__Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Manufactured</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>