force-app/main/default/objects/Product2/fields/AcctSeed__Revenue_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Revenue_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Balance Sheet, Revenue, Expense</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>