force-app/main/default/objects/Product2/fields/AcctSeed__Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Code__c</fullName>
    <description>Used when Avalara Tax Calculation is enabled. Enter the specific Avalara tax code to determine taxability.</description>
    <inlineHelpText>Used when Avalara Tax Calculation is enabled. Enter the specific Avalara tax code to determine taxability.</inlineHelpText>
    <label>Tax Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>