force-app/main/default/objects/Product2/fields/AcctSeed__Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Unit_Cost__c</fullName>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>