force-app/main/default/objects/Product2/fields/AcctSeedERP__Safety_Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Safety_Stock_Quantity__c</fullName>
    <label>Safety Stock Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>