force-app/main/default/objects/Product2/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <description>The number of inventory items that have been allocated to customer orders</description>
    <inlineHelpText>The number of inventory items that are needed to fill customer orders</inlineHelpText>
    <label>Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>