force-app/main/default/objects/Product2/fields/Alternate_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Product_Codes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Product Codes</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Alternate Product Codes</relationshipLabel>
    <relationshipName>Alternate_Products</relationshipName>
    <type>Lookup</type>
</CustomField>