force-app/main/default/objects/Product2/fields/Aluminum_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Aluminum_Thickness__c</fullName>
    <label>Aluminum Thickness</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>