force-app/main/default/objects/Product2/fields/Availability_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Availability_Percentage__c</fullName>
    <label>Availability Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>