force-app/main/default/objects/Product2/fields/Available_For_Mercury_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Mercury_Partner_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available For Mercury Partner Discount</label>
    <type>Checkbox</type>
</CustomField>