force-app/main/default/objects/Product2/fields/Average_MRP_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_MRP_Time__c</fullName>
    <label>Average Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>