force-app/main/default/objects/Product2/fields/Average_MRP_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_MRP_Time_Days__c</fullName>
    <formula>IF( AcctSeed__Inventory_Product__c , (TEXT(BLANKVALUE( Average_MRP_Time__c ,0)) + &apos; Days&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Lead Time (Days)</label>
    <type>Text</type>
</CustomField>