force-app/main/default/objects/Product2/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <label>Bar Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>