force-app/main/default/objects/Product2/fields/Beam__c.field-meta.xml
<CustomField>
    <fullName>Beam__c</fullName>
    <label>Beam</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>