force-app/main/default/objects/Product2/fields/Best_Stocking_Level__c.field-meta.xml
<CustomField>
    <fullName>Best_Stocking_Level__c</fullName>
    <label>Best Stocking Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>