force-app/main/default/objects/Product2/fields/Bin_Locations__c.field-meta.xml
<CustomField>
    <fullName>Bin_Locations__c</fullName>
    <label>Bin Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Back Parts Aisle 1</fullName>
            </value>
            <value>
                <fullName>Back Parts Aisle 2</fullName>
            </value>
            <value>
                <fullName>Lower Mezzanine 1</fullName>
            </value>
            <value>
                <fullName>Lower Mezzanine 2</fullName>
            </value>
            <value>
                <fullName>Storage Bin 1</fullName>
            </value>
            <value>
                <fullName>Storage Bin 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>