force-app/main/default/objects/Product2/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>16</length>
    <type>Text</type>
</CustomField>