force-app/main/default/objects/Product2/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White / Black</fullName>
            </value>
            <value>
                <fullName>Black / Charcoal</fullName>
            </value>
            <value>
                <fullName>Galvanized</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Camouflage</fullName>
            </value>
            <value>
                <fullName>Black/Lime Green</fullName>
            </value>
            <value>
                <fullName>Black/Red</fullName>
            </value>
            <value>
                <fullName>Dark Blue/White</fullName>
            </value>
            <value>
                <fullName>Navy Blue</fullName>
            </value>
            <value>
                <fullName>Black/Cognac</fullName>
            </value>
            <value>
                <fullName>Black/Grey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>