force-app/main/default/objects/Product2/fields/Commission_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Commission_Bonus__c</fullName>
    <label>Commission Bonus</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>