force-app/main/default/objects/Product2/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>Field to set the commission percentage available</description>
    <label>Commission Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>