force-app/main/default/objects/Product2/fields/Consumed_Last_Three_Months__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Last_Three_Months__c</fullName>
    <label>Consumed Last Three Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>