force-app/main/default/objects/Product2/fields/Controls__c.field-meta.xml
<CustomField>
    <fullName>Controls__c</fullName>
    <description>Tiller Handle, Remote or Digital Throttle and Shift</description>
    <label>Controls</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TH</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>DTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>