force-app/main/default/objects/Product2/fields/Default_Gallery_Image_Original__c.field-meta.xml
<CustomField>
    <fullName>Default_Gallery_Image_Original__c</fullName>
    <formula>IF( Default_Image_Id__c == NULL ,
&quot;/resource/defaultProductImage&quot;,
Legend_Gallery_Image__r.Active_S3_Object__r.URL_Original__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Gallery Image Original</label>
    <type>Text</type>
</CustomField>