force-app/main/default/objects/Product2/fields/Default_Image_Thumb__c.field-meta.xml
<CustomField>
    <fullName>Default_Image_Thumb__c</fullName>
    <formula>IF(  Default_Image_Id__c == NULL  ,
  IMAGE(&quot;/resource/defaultProductImage&quot;, &quot;No Product Image&quot;, 75, 75),
  IMAGE(Legend_Gallery_Image__r.Active_S3_Object__r.URL_500x500__c, &quot;Default Image&quot;, 75, 75)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Image Thumb</label>
    <type>Text</type>
</CustomField>