force-app/main/default/objects/Product2/fields/Description_FR__c.field-meta.xml
<CustomField>
    <fullName>Description_FR__c</fullName>
    <label>Description_FR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>