force-app/main/default/objects/Product2/fields/Exclude_from_Upload__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Upload</label>
    <type>Checkbox</type>
</CustomField>