force-app/main/default/objects/Product2/fields/Fuel_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Capacity__c</fullName>
    <label>Fuel Capacity</label>
    <length>144</length>
    <type>Text</type>
</CustomField>