force-app/main/default/objects/Product2/fields/Fuel_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Delivery__c</fullName>
    <description>Carburated or Electronic Fuel Injection</description>
    <label>Fuel Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>