force-app/main/default/objects/Product2/fields/Fuel_Tank__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank__c</fullName>
    <description>Indicates whether the fuel tank is internal, or if it is external, whether or not it is included and what capacity it holds in liters</description>
    <label>Fuel Tank</label>
    <length>4</length>
    <type>Text</type>
</CustomField>