force-app/main/default/objects/Product2/fields/GMBLASERP__Lot_Tracked__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Lot_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lot Tracked</label>
    <type>Checkbox</type>
</CustomField>