force-app/main/default/objects/Product2/fields/Horse_Power__c.field-meta.xml
<CustomField>
    <fullName>Horse_Power__c</fullName>
    <description>For engines</description>
    <label>Horse Power</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>