force-app/main/default/objects/Product2/fields/IEM_Unique_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>IEM_Unique_Part_Number__c</fullName>
    <externalId>true</externalId>
    <label>IEM Unique Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>