force-app/main/default/objects/Product2/fields/Insurance_Profit_Percent_Override__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Profit_Percent_Override__c</fullName>
    <label>Insurance Profit Percent Override</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>