force-app/main/default/objects/Product2/fields/Inventory_MRP_Report__c.field-meta.xml
<CustomField>
    <fullName>Inventory_MRP_Report__c</fullName>
    <formula>IF( AcctSeed__Inventory_Product__c , HYPERLINK(&#39;/apex/gpInventoryReport_MRP?id=&#39; &amp; Id , &#39;MRP Qty Available &#39; &amp; TEXT(MRP_Quantity__c), &#39;_blank&#39;), &#39;Non Inventory&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory MRP Report</label>
    <type>Text</type>
</CustomField>