force-app/main/default/objects/Product2/fields/Is_Residual_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Is_Residual_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true we calculate the insurance amount on the residual amount else calculate on primary amount</description>
    <label>Is Residual Insurance</label>
    <type>Checkbox</type>
</CustomField>