force-app/main/default/objects/Product2/fields/IsForUnitTest__c.field-meta.xml
<CustomField>
    <fullName>IsForUnitTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used ONLY in Apex Unit test code. Allows us to set criteria in Process Builder ( IsForUnitTest__c == false ) to enter the process to avoid issues with unit test failures</description>
    <label>Is For Unit Test</label>
    <type>Checkbox</type>
</CustomField>