force-app/main/default/objects/Product2/fields/jitterbitImport__c.field-meta.xml
<CustomField>
    <fullName>jitterbitImport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>temp field to distingush boats that where imported using jitterbit</description>
    <label>jitterbitImport</label>
    <type>Checkbox</type>
</CustomField>