force-app/main/default/objects/Product2/fields/Landed_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landed_Unit_Cost__c</fullName>
    <label>Landed Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>