force-app/main/default/objects/Product2/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>