force-app/main/default/objects/Product2/fields/Legend_Gallery_Image__c.field-meta.xml
<CustomField>
    <fullName>Legend_Gallery_Image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legend Gallery Image</label>
    <referenceTo>Legend_Gallery_Image__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>