force-app/main/default/objects/Product2/fields/Loaded_Cost__c.field-meta.xml
<CustomField>
    <fullName>Loaded_Cost__c</fullName>
    <formula>Partner_Price__c + ( Partner_Price__c * $Setup.Legend_Settings__c.PAC_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaded Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>