force-app/main/default/objects/Product2/fields/Max_Num_of_Insured_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Max_Num_of_Insured_Monthly_Payments__c</fullName>
    <label>Max Num of Insured Monthly Payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Term</fullName>
            </value>
            <value>
                <fullName>Recurring ( 6 per claim )</fullName>
            </value>
            <value>
                <fullName>Variable - 12 months</fullName>
            </value>
            <value>
                <fullName>Variable - 24 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>