force-app/main/default/objects/Product2/fields/Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Capacity__c</fullName>
    <label>Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>