force-app/main/default/objects/Product2/fields/Maximum_Horsepower__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Horsepower__c</fullName>
    <label>Maximum Horsepower</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>