force-app/main/default/objects/Product2/fields/Maximum_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Inventory__c</fullName>
    <label>Maximum Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>