force-app/main/default/objects/Product2/fields/Maximum_Persons__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Persons__c</fullName>
    <label>Maximum Persons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>