force-app/main/default/objects/Product2/fields/Model_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Model_Year_End__c</fullName>
    <description>Field to determine last model year product was used</description>
    <label>Model Year End</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>