force-app/main/default/objects/Product2/fields/Model_Year_Start__c.field-meta.xml
<CustomField>
    <fullName>Model_Year_Start__c</fullName>
    <description>Field to determine the first model year the part was used in</description>
    <label>Model Year Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>