force-app/main/default/objects/Product2/fields/NMMA_Length__c.field-meta.xml
<CustomField>
    <fullName>NMMA_Length__c</fullName>
    <label>NMMA Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under 14&apos;</fullName>
            </value>
            <value>
                <fullName>14&apos; - 14&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>15&apos; - 15&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>16&apos; - 16&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>17&apos; - 17&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>18&apos; - 18&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>19&apos; - 20&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>21&apos; - 23&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>24&apos; - 26&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>27&apos; - 29&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>Over 30&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>