force-app/main/default/objects/Product2/fields/Number_of_Tires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tires__c</fullName>
    <description>Number of tires on a trailer used to calculate tire tax</description>
    <label>Number of Tires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>