force-app/main/default/objects/Product2/fields/On_Hand__c.field-meta.xml
<CustomField>
    <fullName>On_Hand__c</fullName>
    <description>The total number of inventory items that are physically on hand</description>
    <label>On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>