force-app/main/default/objects/Product2/fields/Package_Length__c.field-meta.xml
<CustomField>
    <fullName>Package_Length__c</fullName>
    <label>Package Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>