force-app/main/default/objects/Product2/fields/Package_Width__c.field-meta.xml
<CustomField>
    <fullName>Package_Width__c</fullName>
    <label>Package Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>