force-app/main/default/objects/Product2/fields/partsUpdateDelete__c.field-meta.xml
<CustomField>
    <fullName>partsUpdateDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>partsUpdateDelete</label>
    <type>Checkbox</type>
</CustomField>