force-app/main/default/objects/Product2/fields/Physical_Location__c.field-meta.xml
<CustomField>
    <fullName>Physical_Location__c</fullName>
    <inlineHelpText>Is the boat in Whitefish or Barrie</inlineHelpText>
    <label>Physical Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Whitefish</fullName>
                <default>true</default>
                <label>Whitefish</label>
            </value>
            <value>
                <fullName>Barrie</fullName>
            </value>
            <value>
                <fullName>Temagami</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>