force-app/main/default/objects/Product2/fields/Power_Trim_and_Tilt__c.field-meta.xml
<CustomField>
    <fullName>Power_Trim_and_Tilt__c</fullName>
    <description>Indicates whether Manual, Gas Assist, Power Tilt, or Power Trim and Tilt</description>
    <label>Power Trim and Tilt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>PTT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>