force-app/main/default/objects/Product2/fields/Regulatory_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Compliance__c</fullName>
    <description>Regulatory categories for Engines</description>
    <label>Regulatory Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>W-NEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>